# cmake-howto

./: CMakeLists.txt  config.h.in  main.cpp
